Bugfix: prevent scrollbar from appearing in the content area if possible
This might cause problems with internet explorer, but it likely only affects very old versions.

--- a/sites/all/themes/mcneese_www/css/screen/www-screen-common.css
+++ b/sites/all/themes/mcneese_www/css/screen/www-screen-common.css
@@ -16,8 +16,6 @@
 }
 
 .mcneese #mcneese-page {
-  overflow: auto;
-
   padding: 0px 5px 5px 5px;
 
   border-bottom-left-radius: 0px;
